[project]
name = "mlx-dllm"
version = "0.1.0"
description = "MLX (Apple Silicon) inference runtime for a2d masked-diffusion language-model checkpoints"
readme = "README.md"
license = { file = "LICENSE" }
# fast-dllm-mlx declares requires-python>=3.13; pip refuses to resolve it on
# older interpreters, so we inherit the floor.
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.32",
    # runtime.py reaches into mlx-lm private internals (_download, _get_classes)
    # and the gpt2 module's create_attention_mask binding; keep to 0.31.x.
    "mlx-lm>=0.31,<0.32",
    # mlx-lm 0.31.x requires transformers>=5 but crashes on import with 5.13+
    # (AutoTokenizer.register signature change). fast-dllm-mlx raises the
    # floor to >=5.5.4.
    "transformers>=5.5.4,<5.13",
    # Qwen/Dream diffusion engine (Apache-2.0), consumed as a pinned git
    # dependency, never vendored. Pin = undeemed/Fast-dLLM-mlx fork, one
    # packaging-only commit ("pip-installable" branch) on top of upstream
    # MacPaw/Fast-dLLM-mlx@70bd1857ce8c56d2aa63b54bb6e7ae680d539e60, which
    # lacks a build-system table and does not pip-install.
    "fast-dllm-mlx @ git+https://github.com/undeemed/Fast-dLLM-mlx@8f8cf7b8b8928f0e44e0de0f5db377ddac201365",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "torch>=2.4",
    # The parity references patch transformers causality seams (GPT-2:
    # GPT2Attention.bias + create_causal_mask; Qwen2: create_causal_mask).
    # Seams verified against 5.12.x; fast-dllm-mlx forces >=5.5.4 anyway.
    "transformers>=5.5.4,<5.13",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_dllm"]

[tool.hatch.metadata]
# The fast-dllm-mlx dependency is a pinned git URL (direct reference).
allow-direct-references = true
