[project]
name = "mlx-dllm"
version = "0.1.0"
description = "MLX (Apple Silicon) inference runtime for a2d masked-diffusion checkpoints and Qwen/Dream-family diffusion models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
# mlx ships the Python bindings (mlx.core/mlx.nn) on every platform but NOT the
# native runtime library. On Darwin the mlx wheel auto-pulls the Metal backend
# (mlx-metal); on Linux the plain mlx wheel's libmlx.so is a Metal-only stub
# that fails to load ("libmlx.so: cannot open shared object file"), and mlx-lm
# only depends on mlx under Darwin, so nothing supplies a working backend here.
# The mlx[cpu] extra pulls mlx-cpu (the CPU libmlx.so) exact-version-pinned to
# the mlx frontend, giving an ABI-matched CPU build. Note mlx-cpu ALONE is not
# enough - it ships only libmlx.so, not the mlx.core bindings - so we still need
# the mlx frontend, hence mlx[cpu] rather than bare mlx-cpu on Linux.
dependencies = [
    "mlx[cpu]>=0.32; sys_platform == 'linux'",
    "mlx>=0.32; sys_platform != 'linux'",
    # runtime.py reaches into mlx-lm private internals (_download, _get_classes)
    # and the gpt2 module's create_attention_mask binding; keep to 0.31.x.
    "mlx-lm>=0.31,<0.32",
    # mlx-lm 0.31.x requires transformers>=5 but crashes on import with 5.13+
    # (AutoTokenizer.register signature change).
    "transformers>=5.0,<5.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "torch>=2.4",
    # The parity references neutralize the GPT-2 attention/model mask seams
    # and Qwen2's model-level create_causal_mask seam, verified on 5.0.x.
    "transformers~=5.0.0",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_dllm"]
